--- a/app/globals.css
+++ b/app/globals.css
@@ -28,5 +28,13 @@
   background-repeat: no-repeat;
   
 }
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
   
 
